解决一个css污染问题

--- a/src/components/Calculator/App.scss
+++ b/src/components/Calculator/App.scss
@@ -3,6 +3,8 @@
 
 .wrapper {
     box-sizing: border-box;
+    margin: 0;
+    font: 100 14px 'Roboto';
 }
 
 .wrapper *,
@@ -11,10 +13,8 @@
     box-sizing: inherit;
 }
 
-body {
-    margin: 0;
-    font: 100 14px 'Roboto';
-}
+//body {
+//}
 
 button {
     display: block;
