--- a/src/components/todo1/App.scss
+++ b/src/components/todo1/App.scss
@@ -28,12 +28,12 @@
     background: #f5f5f5
 }
 
-header {
-    h1 {
-        text-align: center;
-        text-decoration: underline;
-    }
-}
+//header {
+//    h1 {
+//        text-align: center;
+//        text-decoration: underline;
+//    }
+//}
 
 .container {
     width: 760px;
